# dag-falsification

./: .gitignore  MANIFEST.in  README.md  _config.yml  demo.ipynb  index.md  pyproject.toml
_layouts/: default.html
experiments/: paper.mplstyle  plot_real_results.py  plot_synthetic_results.py  run_with_config.py
experiments/configs/: de-e_auto.json  de-e_sachs.json  de-e_synthetic_linear.json  de-e_synthetic_nonlinear.json  de-n_auto.json  de-n_sachs.json  de-n_synthetic_linear.json  de-n_synthetic_nonlinear.json
falsifydags/: config.py  datasets.py
falsifydags/data/: APM_data.csv  APM_g_true.gml  sachs_data.xls
falsifydags/utils/: __init__.py  auxiliaries.py  graph.py  independence_tests.py  synthetic_data.py
files/: falsifying-dags.bib
